--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.1.6",
+    "qs": "^6.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "concurrently": "^7.2.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "http-server": "^14.1.0"
+    "netlify-cli": "^10.3.1"
   }
 }
