--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.27.2",
+    "firebase": "^9.8.3",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.1.6",
     "qs": "^6.10.3",
